--- a/src/components/spinner/styles.module.css
+++ b/src/components/spinner/styles.module.css
@@ -3,6 +3,14 @@
     height: 100%;
 }
 
+.mouth2 {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    animation: rotate 1s cubic-bezier(0.46, 0.22, 0.46, 0.78) infinite;
+    height: 100%;
+}
+
 .mouth_outer {
     position: relative;
     top: 0px;
@@ -18,6 +26,15 @@
     top: 0px;
     left: 0px;
     z-index: 1;
+    animation: rotate 8s linear infinite;
+    height: 100%;
+}
+
+.eyes {
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    z-index: 2;
     animation: rotate 8s linear infinite;
     height: 100%;
 }
